deploy/rmx/cit/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cit
  labels:
    app: cit
spec:
  selector:
    matchLabels:
      app: cit
  template:
    metadata:
      labels:
         app: cit
    spec:
      containers:
        - name: cit
          image: nexus.mydomain.com/myproject-cit-service
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
