deploy/rmx/cit/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cit
  labels:
    app: cit
spec:
  containers:
    - name: cit
      image: nexus.mydomain.com/myproject-cit-service
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
