deploy/rmx/cit/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cit
  name: cit
spec:
  ports:
  - name: http
    port: 58451
    protocol: TCP
  selector:
    app: cit
  type: LoadBalancer
